# alaric

./: .gitignore  Cargo.toml  README.md  agent-policy.example.json  agent-policy.json  docker-compose.postgres18.yml  ideas.md  peer-attestation-policy.example.json  policy-keys.example.json  server-auth.example.json  server-auth.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: audit.yml  ci.yml  integration-tests.yml
.sqlx/: query-17fb966fd278140c74728e6ce691d81881c7c86b69f1034c23313ba7808d0f32.json  query-19ce66a4b08b6f849f9f799b2c9f2c0b2e4fd62c9acddf86c0c3f8bef2164107.json  query-5ecf3c6762c3f9a09638a1193910ce2731f071e5d130b06005422a27a561d527.json  query-7359829e36dcb29cacc9aa9ba9d07f08aa4a6a12fdf3984e0d15acc03b8ca50f.json  query-8f44bcd4a7baca434f516edb2f916c7061418f04b499e01fb699dac82966c6be.json  query-93c50288c1c82c02e5d724ca4da4e54e3bcbe80286353c296964819758f061ed.json  query-a4abce2a0908d15e3e5c04b1f4af6515058e5993d21051bfc38ce4e2ec50601d.json  query-ec71af3191d95821f24ed017dbcc963c99f165d4dfe3e9eb7071db1fcaa2e782.json
admin/: Cargo.toml
admin/src/: group.rs  key.rs  main.rs  principal.rs
agent/: Cargo.toml
agent/src/: app.rs  executor.rs  lib.rs  main.rs  policy.rs  session.rs
client/: Cargo.toml
client/src/: app.rs  list_agents.rs  main.rs  run.rs  session.rs
lib/: Cargo.toml
lib/.sqlx/: query-07462387bac69b9975ffbbb37881de5ff79ba8ffbc006c7f525850cb6ebc7ee7.json  query-0ba1767c1a4d58124b0527dcb9e0d66d5e92f189c14c01c49fb357725648de85.json  query-19815fb2c56dfaad0c2980310a004e2c0905644a6200360af55e572dbc153676.json  query-92a7643c3d5d6197dda883064597534cdc385c8d6cc61c0904b081cbdc443f10.json  query-b0b2898e28e3ad89faf74006dd81b2b766269c5dbc2575ec0b243a8a78f84cd0.json
lib/examples/: gen_auth_config.rs  gen_identity_bundle.rs  import_auth_config.rs
lib/migrations/: 0001_phase1_core.sql  0002_auth_config_notify.sql  0003_agent_groups.sql  0004_attestation_policy.sql
lib/src/: lib.rs
lib/src/constants/: mod.rs
lib/src/database/: admin_store.rs  agents.rs  auth_listener.rs  command_runs.rs  mod.rs  principals.rs  server_store.rs  sessions.rs
lib/src/protocol/: attestation_policy.rs  commands.rs  discovery.rs  framing.rs  handshake.rs  identity.rs  ids.rs  mod.rs  peer_attestation.rs  secure.rs
lib/src/security/: mod.rs
lib/src/security/noise/: consts.rs  mod.rs  noisesession.rs  prims.rs  state.rs  types.rs  utils.rs
lib/src/types/: framing.rs  ids.rs  mod.rs
scripts/: db18-down.sh  db18-up.sh  sqlx-prepare.sh
server/: Cargo.toml
server/src/: accept_loop.rs  auth.rs  connection.rs  error.rs  lib.rs  main.rs  responses.rs  signal.rs  state.rs
server/tests/: handshake.rs  restricted_commands.rs
