[workspace.package]
edition = "2024"

[workspace]
members = [
    "admin",
    "agent",
    "client",
    "lib",
    "server",
]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
wildcard_imports = "warn"
empty_structs_with_brackets = "warn"
cargo_common_metadata = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
