[package]
name = "alaric-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "signal", "process"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
lib = { path = "../lib" }
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
