[package]
name = "alaric-client"
version = "0.1.0"
edition = "2024"

# Define a separate lint table here, since we expect to use stdout for CLI
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
dbg_macro = "warn"
wildcard_imports = "warn"
empty_structs_with_brackets = "warn"
cargo_common_metadata = "warn"

[dependencies]
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
alaric-lib = { path = "../lib" }
clap = { version = "4.6.0", features = ["derive"] }
