[package]
name = "lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake2-rfc = "0.2.18"
constant_time_eq = "0.1.5"
hacl-star = "0.1.0"
hex = "0.4.3"
rand = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.49.0", features = ["io-util"] }
zeroize = "1.3.0"
