[package]
name = "alaric-lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake2-rfc = "0.2.18"
chrono = { version = "0.4.44", features = ["serde"] }
constant_time_eq = "0.4.2"
hacl-star = "0.1.0"
hex = "0.4.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "macros", "uuid", "json", "chrono", "ipnetwork"], default-features = false }
tokio = { version = "1.51.0", features = ["io-util"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
zeroize = "1.8.2"
