[package]
name = "alaric-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
alaric-lib = { path = "../lib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.10.0"
hex = "0.4.3"

[dev-dependencies]
alaric-agent = { path = "../agent" }
